Limit kudosu per user per beatmapset

--- a/.env.example
+++ b/.env.example
@@ -141,6 +141,7 @@ OSU_RUNNING_COST=
 
 # SEARCH_MINIMUM_LENGTH=2
 
+# BEATMAPSET_DISCUSSION_KUDOSU_PER_USER=10
 # BEATMAPSET_REQUIRED_HYPE=5
 # BEATMAPSET_USER_WEEKLY_HYPE=3
 # BEATMAPSET_USER_DAILY_NOMINATIONS=10
