--- a/docker/dependencies/Dockerfile
+++ b/docker/dependencies/Dockerfile
@@ -2,6 +2,9 @@ FROM alpine:3.9
 
 RUN apk update && \
     apk add --no-cache \
+    curl \
+    git \
+    nodejs \
     php7 \
     php7-ctype \
     php7-curl \
@@ -23,4 +26,5 @@ RUN apk update && \
     php7-tokenizer \
     php7-xml \
     php7-xmlwriter \
-    php7-zip
+    php7-zip \
+    yarn
