limit number of user clients

--- a/.env.example
+++ b/.env.example
@@ -199,3 +199,5 @@ SITE_SWITCHER_JS_HASH=
 
 # The open source bounty info page/form url
 #OS_BOUNTY_URL=http://example.com/bounty_form
+
+# OAUTH_MAX_USER_CLIENTS=1
