starting beatmap/difficulty selector wip

--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "require-dir": "^1.2.0",
     "shopify-buy": "^2.6.1",
     "slate": "^0.47.8",
+    "slate-instant-replace": "^0.1.11",
     "slate-react": "^0.22.8",
+    "slate-soft-break": "^0.9.0",
     "terser-webpack-plugin": "^1.4.1",
     "timeago": "^1.5.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
