--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ APP_LOG_LEVEL=debug
 # APP_SENTRY=https://...
 # APP_SENTRY_PUBLIC=https://...
 
+# DOCS_URL=
+
 DB_HOST=localhost
 DB_DATABASE=osu
 DB_USERNAME=osuweb
