Update to laravel 6
Things don't quite work yet. Some libraries are changed to the laravel 6 compatible ones.

--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,16 @@
   "repositories": [
     {
       "type": "vcs",
+      "url": "https://github.com/nanaya/laravel-datadog-helper"
+    },
+    {
+      "type": "vcs",
       "url": "https://github.com/nanaya/slack-php"
     }
   ],
   "require": {
-    "chaseconey/laravel-datadog-helper": "*",
+    "bluedragon/laravel-routes": "*",
+    "chaseconey/laravel-datadog-helper": "dev-laravel-6",
     "doctrine/dbal": "*",
     "egulias/email-validator": "*",
     "elasticsearch/elasticsearch": ">=6.0, <6.6",
@@ -23,20 +28,21 @@
     "graham-campbell/github": "*",
     "guzzlehttp/guzzle": "*",
     "itsgoingd/clockwork": ">=3.0",
-    "jenssegers/agent": "^2.6",
-    "laravel/framework": "5.5.*",
+    "jenssegers/agent": "*",
+    "laravel/framework": "6.*",
+    "laravel/helpers": "^1.1",
     "laravel/passport": "*",
-    "laravel/tinker": "~1.0",
-    "laravelcollective/html": "5.5.*",
+    "laravel/tinker": "*",
+    "laravelcollective/html": "*",
     "league/commonmark": ">=0.16.0",
     "league/commonmark-ext-autolink": "^1.0",
     "league/commonmark-ext-table": "*",
-    "league/flysystem-aws-s3-v3": "^1.0",
+    "league/flysystem-aws-s3-v3": "*",
     "league/fractal": "*",
-    "league/html-to-markdown": "^4.7",
-    "maknz/slack": "dev-laravel-5.4",
+    "league/html-to-markdown": "*",
+    "maknz/slack": "dev-laravel-any",
     "mariuzzo/laravel-js-localization": "*",
-    "mpociot/laravel-apidoc-generator": "^3.7",
+    "mpociot/laravel-apidoc-generator": "*",
     "paypal/rest-api-sdk-php": "*",
     "sentry/sentry-laravel": "*",
     "symfony/yaml": "*",
@@ -44,12 +50,12 @@
     "xsolla/xsolla-sdk-php": "*"
   },
   "require-dev": {
-    "beyondcode/laravel-query-detector": "^1.0",
-    "filp/whoops": "~2.0",
-    "fzaninotto/faker": "~1.4",
-    "laravel/dusk": "^2.0",
-    "mockery/mockery": "~1.0",
-    "phpunit/phpunit": "~7.0",
+    "beyondcode/laravel-query-detector": "*",
+    "filp/whoops": "*",
+    "fzaninotto/faker": "*",
+    "laravel/dusk": "*",
+    "mockery/mockery": "*",
+    "phpunit/phpunit": "*",
     "symfony/css-selector": "*",
     "symfony/dom-crawler": "*"
   },
