--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "imagesloaded": "^4.1.3",
     "immutable": "^4.0.0-rc.12",
     "inter-ui": "^3.9.0",
+    "is-hotkey": "^0.1.6",
     "jquery": "^3.3.0",
     "jquery-ui": "^1.12.0",
     "jquery-ujs": "^1.2.2",
@@ -62,6 +63,7 @@
     "webpack-sentry-plugin": "^2.0.2"
   },
   "devDependencies": {
+    "@types/is-hotkey": "^0.1.1",
     "@types/jasmine": "^3.3.13",
     "@types/jquery": "^3.3.0",
     "@types/lodash": "^4.14.136",
