Add basic github webhook with verifying secret

--- a/.env.example
+++ b/.env.example
@@ -93,6 +93,8 @@ PUSHER_SECRET=
 
 # GITHUB_TOKEN=
 
+# WIKI_WEBHOOK_SECRET=
+
 # DATADOG_ENABLED=true
 # DATADOG_PREFIX=osu.web
 # DATADOG_API_KEY=
