--- a/.env.example
+++ b/.env.example
@@ -100,6 +100,7 @@ PUSHER_SECRET=
 # DATADOG_HOST=https://app.datadoghq.com
 # DATADOG_STATSD_HOST=localhost
 # DATADOG_STATSD_PORT=8125
+# DATADOG_STATSD_SOCKET=
 
 # LANDING_VIDEO_URL=
 # SUPPORT_OSU_VIDEO_URL=
