Use fork instead
0.8.0 has problem with passing parameter of 0 (or anything falsy).
Then might as well fork with the fixes.

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
     {
       "type": "vcs",
       "url": "https://github.com/nanaya/slack-php"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/nanaya/ziggy"
     }
   ],
   "require": {
@@ -40,7 +44,7 @@
     "paypal/rest-api-sdk-php": "*",
     "sentry/sentry-laravel": "*",
     "symfony/yaml": "*",
-    "tightenco/ziggy": "^0.8.0",
+    "tightenco/ziggy": "dev-osuweb",
     "xsolla/xsolla-sdk-php": "*"
   },
   "require-dev": {
