--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "require-dir": "^1.2.0",
     "shopify-buy": "^2.6.1",
     "slate": "^0.47.8",
-    "slate-instant-replace": "^0.1.11",
+    "slate-auto-replace": "^0.12.1",
+    "slate-instant-replace": "../slate-instant-replace",
     "slate-react": "^0.22.8",
     "slate-soft-break": "^0.9.0",
     "terser-webpack-plugin": "^1.4.1",
