--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
+    "@types/slate-react": "^0.22.5",
     "babel-preset-react": "^6.3.13",
     "blueimp-file-upload": "^9.11.2",
     "bootstrap": "^3.3.6",
     "clipboard-polyfill": "^2.3.0",
     "d3": "^5.7.0",
     "imagesloaded": "^4.1.3",
+    "immutable": "^4.0.0-rc.12",
     "inter-ui": "^3.9.0",
     "jquery": "^3.3.0",
     "jquery-ui": "^1.12.0",
@@ -44,6 +46,8 @@
     "remark-parse": "^7.0.1",
     "require-dir": "^1.2.0",
     "shopify-buy": "^2.6.1",
+    "slate": "^0.47.8",
+    "slate-react": "^0.22.8",
     "terser-webpack-plugin": "^1.4.1",
     "timeago": "^1.5.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
