--- a/.env.example
+++ b/.env.example
@@ -146,6 +146,7 @@ OSU_RUNNING_COST=
 
 # SEARCH_MINIMUM_LENGTH=2
 
+# BEATMAPSET_CLIENT_BUNDLE="3756 163112 140662 151878 190390 123593 241526 299224"
 # BEATMAPSET_DISCUSSION_KUDOSU_PER_USER=10
 # BEATMAPSET_REQUIRED_HYPE=5
 # BEATMAPSET_USER_WEEKLY_HYPE=3
