Add Markdown rendering support for 'review' message type of beatmap discussions

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-autosize-textarea": "7.0.0",
     "react-dom": "^16.8.4",
     "react-dom-factories": "^1.0.0",
+    "react-markdown": "^4.2.2",
     "react-virtual-list": "^2.3.0",
+    "remark-parse": "^7.0.1",
     "require-dir": "^1.2.0",
     "shopify-buy": "^2.6.1",
     "timeago": "^1.5.0",
