--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "coffee-loader": "^0.9.0",
     "coffeescript": "^1.12.6",
     "cross-env": "^5.2.0",
+    "deasync": "^0.1.15",
     "glob": "^7.1.3",
     "import-glob-loader": "^1.1.0",
     "imports-loader": "^0.8.0",
