--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "react-virtual-list": "^2.3.0",
     "require-dir": "^1.2.0",
     "shopify-buy": "^2.6.1",
+    "terser-webpack-plugin": "^1.4.1",
     "timeago": "^1.5.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "turbolinks": "^5.1.1",
     "typescript": "~3.5.3",
     "url-polyfill": "^1.1.6",
+    "watchpack": "^1.6.0",
+    "webpack": "^4.41.2",
     "webpack-sentry-plugin": "^2.0.2"
   },
   "devDependencies": {
