--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "turbolinks": "^5.1.1",
     "typescript": "~3.5.3",
+    "unified": "^8.4.2",
     "url-polyfill": "^1.1.6",
     "webpack-sentry-plugin": "^2.0.2"
   },
