--- a/.env.example
+++ b/.env.example
@@ -196,6 +196,8 @@ SITE_SWITCHER_JS_HASH=
 
 # ALLOW_REGISTRATION=true
 
+# USER_POST_ACTION_VERIFICATION=true
+
 # USER_MAX_MULTIPLAYER_ROOMS=1
 # USER_MAX_MULTIPLAYER_ROOMS_SUPPORTER=5
 
