--- a/.env.example
+++ b/.env.example
@@ -197,6 +197,7 @@ SITE_SWITCHER_JS_HASH=
 # ALLOW_REGISTRATION=true
 
 # USER_POST_ACTION_VERIFICATION=true
+# USER_MIN_LAST_PLAYED_DAYS_FOR_POSTING=180
 
 # USER_MAX_MULTIPLAYER_ROOMS=1
 # USER_MAX_MULTIPLAYER_ROOMS_SUPPORTER=5
