--- a/.env.example
+++ b/.env.example
@@ -196,6 +196,7 @@ SITE_SWITCHER_JS_HASH=
 
 # ALLOW_REGISTRATION=true
 
+# USER_ALLOW_EMAIL_LOGIN=true
 # USER_POST_ACTION_VERIFICATION=true
 
 # USER_MAX_MULTIPLAYER_ROOMS=1
