--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ DB_USERNAME=osuweb
 # DB_PASSWORD=
 
 # REDIS_HOST=127.0.0.1
+# REDIS_PORT=6379
+# REDIS_DB=0
 
 # MEMCACHED_PERSISTENT_ID=
 # MEMCACHED_USERNAME=
@@ -207,6 +209,7 @@ SITE_SWITCHER_JS_HASH=
 # NOTIFICATION_QUEUE=notification
 # NOTIFICATION_REDIS_HOST=127.0.0.1
 # NOTIFICATION_REDIS_PORT=6379
+# NOTIFICATION_REDIS_DB=0
 # NOTIFICATION_SERVER_LISTEN_HOST=127.0.0.1
 # NOTIFICATION_SERVER_LISTEN_PORT=3000
 # NOTIFICATION_ENDPOINT=/home/notifications/feed
