Set correct env variable for dusk

--- a/.env.dusk.local.example
+++ b/.env.dusk.local.example
@@ -24,4 +24,6 @@ ES_HOST=127.0.0.1:9200
 ES_SCORES_HOST=127.0.0.1:9200
 GITHUB_TOKEN=<whee>
 
+GROUP_CREATE_IF_MISSING=true
+
 # DUSK_WEBDRIVER_URL=http://localhost:9515
