--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,10 @@
     },
     {
       "type": "vcs",
+      "url": "https://github.com/nanaya/xsolla-sdk-php"
+    },
+    {
+      "type": "vcs",
       "url": "https://github.com/nanaya/ziggy"
     }
   ],
@@ -51,7 +55,7 @@
     "sentry/sentry-laravel": "*",
     "symfony/yaml": "*",
     "tightenco/ziggy": "dev-osuweb",
-    "xsolla/xsolla-sdk-php": "*"
+    "xsolla/xsolla-sdk-php": ">=4.2.0"
   },
   "require-dev": {
     "beyondcode/laravel-query-detector": "*",
