--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,6 @@
     {
       "type": "vcs",
       "url": "https://github.com/nanaya/xsolla-sdk-php"
-    },
-    {
-      "type": "vcs",
-      "url": "https://github.com/nanaya/ziggy"
     }
   ],
   "require": {
@@ -50,7 +46,7 @@
     "paypal/rest-api-sdk-php": "*",
     "sentry/sentry-laravel": "*",
     "symfony/yaml": "*",
-    "tightenco/ziggy": "dev-osuweb",
+    "tightenco/ziggy": ">=0.8.1",
     "xsolla/xsolla-sdk-php": ">=4.2.0"
   },
   "require-dev": {
