better test reporter

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-typescript": "^4.1.0",
     "karma-webpack": "3.0.0",
