Lock laravel version to 6.8.0
Our current transaction manager depends on transaction level to be decremented before the committed event is fired but the behavior is changed in 6.9.0 (laravel/framework#30883) and as a result I don't see any easy way to determine whether or not a connection has finished all of its transactions.

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "guzzlehttp/guzzle": "*",
     "itsgoingd/clockwork": ">=3.0",
     "jenssegers/agent": "*",
-    "laravel/framework": "6.*",
+    "laravel/framework": "6.8.0",
     "laravel/helpers": "^1.1",
     "laravel/passport": "*",
     "laravel/slack-notification-channel": "^2.0",
