--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "development": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=webpack.config.js",
     "generate-localizations": "node generate-localizations.js",
     "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=webpack.config.js",
-    "lint": "tslint -c tslint.json 'resources/assets/lib/**/*.{ts,tsx}'",
+    "lint": "tslint -c tslint.json 'resources/assets/lib/**/*.{js,jsx,ts,tsx}'",
     "localize": "yarn run generate-localizations",
     "prod": "yarn run production",
     "production": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=webpack.config.js",
