--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
-    "@types/slate-react": "^0.22.5",
     "babel-preset-react": "^6.3.13",
     "blueimp-file-upload": "^9.11.2",
     "bootstrap": "^3.3.6",
@@ -47,10 +46,11 @@
     "remark-parse": "^7.0.1",
     "require-dir": "^1.2.0",
     "shopify-buy": "^2.6.1",
-    "slate": "^0.47.8",
+    "slate": "^0.57.1",
     "slate-auto-replace": "^0.12.1",
+    "slate-history": "^0.57.1",
     "slate-instant-replace": "../slate-instant-replace",
-    "slate-react": "^0.22.8",
+    "slate-react": "^0.57.1",
     "slate-soft-break": "^0.9.0",
     "terser-webpack-plugin": "^1.4.1",
     "timeago": "^1.5.0",
