--- a/.env.example
+++ b/.env.example
@@ -222,3 +222,7 @@ SITE_SWITCHER_JS_HASH=
 # USER_REPORT_NOTIFICATION_ENDPOINT=
 
 # LOG_CHANNEL=single
+
+# WIKI_BRANCH=master
+# WIKI_REPOSITORY=osu-wiki
+# WIKI_USER=ppy
