--- a/.env.example
+++ b/.env.example
@@ -228,3 +228,5 @@ SITE_SWITCHER_JS_HASH=
 # WIKI_BRANCH=master
 # WIKI_REPOSITORY=osu-wiki
 # WIKI_USER=ppy
+
+# BEATMAPSET_DISCUSSION_REVIEW_ENABLED=true
