--- a/.env.example
+++ b/.env.example
@@ -230,3 +230,4 @@ SITE_SWITCHER_JS_HASH=
 # WIKI_USER=ppy
 
 # BEATMAPSET_DISCUSSION_REVIEW_ENABLED=true
+# BEATMAPSET_DISCUSSION_REVIEW_MINIMUM_ISSUES=1
