Allow setting a max block count restriction for reviews

--- a/.env.example
+++ b/.env.example
@@ -230,4 +230,5 @@ SITE_SWITCHER_JS_HASH=
 # WIKI_USER=ppy
 
 # BEATMAPSET_DISCUSSION_REVIEW_ENABLED=true
+# BEATMAPSET_DISCUSSION_REVIEW_MAXIMUM_BLOCKS=1
 # BEATMAPSET_DISCUSSION_REVIEW_MINIMUM_ISSUES=1
