Add Ukraine localisation

--- a/.styleci.yml
+++ b/.styleci.yml
@@ -37,6 +37,7 @@ finder:
     - resources/lang/sv
     - resources/lang/th
     - resources/lang/tr
+    - resources/lang/uk
     - resources/lang/vi
     - resources/lang/zh
     - resources/lang/zh-tw
