--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "turbolinks": "^5.1.1",
     "typescript": "~3.7.2",
     "unified": "^8.4.2",
+    "unist-util-visit": "^2.0.1",
     "url-polyfill": "^1.1.6",
     "watchpack": "^1.6.0",
     "webpack": "^4.41.2",
