--- a/.env.example
+++ b/.env.example
@@ -230,3 +230,5 @@ SITE_SWITCHER_JS_HASH=
 # BEATMAPSET_DISCUSSION_REVIEW_ENABLED=true
 # BEATMAPSET_DISCUSSION_REVIEW_MAXIMUM_BLOCKS=1
 # BEATMAPSET_DISCUSSION_REVIEW_MINIMUM_ISSUES=1
+
+# PAGINATION_MAX_COUNT=10000
