Replace slate with forked version temporarily to fix backwards-selection and document-scrolling-around-on-focus issues.

--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "remark-parse": "^7.0.1",
     "require-dir": "^1.2.0",
     "shopify-buy": "^2.6.1",
-    "slate": "^0.57.1",
-    "slate-history": "^0.57.1",
-    "slate-react": "^0.57.1",
+    "slate": "npm:@nekodex/slate",
+    "slate-history": "npm:@nekodex/slate-history",
+    "slate-react": "npm:@nekodex/slate-react",
     "terser-webpack-plugin": "^1.4.1",
     "timeago": "^1.5.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
